--- a/src/style.css
+++ b/src/style.css
@@ -60,9 +60,11 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
+  /* max-width: 1280px; */
+  width: 100%;
+  /* height: 100vh; */
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
 
