fix(scroll appeared when cursor cross the viewport)

--- a/src/style.css
+++ b/src/style.css
@@ -67,6 +67,9 @@ button:focus-visible {
   /* padding: 2rem; */
   text-align: center;
 }
+*{
+  overflow: hidden;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
